sw/Module_sw.mk
@@ -111,6 +111,7 @@ $(eval $(call gb_Module_add_slowcheck_targets,sw,\
     CppunitTest_sw_core_accessibilitycheck \
     CppunitTest_sw_core_layout \
     CppunitTest_sw_core_frmedt \
+    CppunitTest_sw_core_txtnode \
 ))
 
 ifneq ($(DISABLE_GUI),TRUE)
